--- a/azure_create_complete_vm.yml
+++ b/azure_create_complete_vm.yml
@@ -4,5 +4,5 @@
   tasks:
   - name: Create resource group
     azure_rm_resourcegroup:
-      name: myResourceGroup
-      location: eastus
+      name: {{ resource_group_name }}
+      location: {{ region }}
